# RoboJuDo

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  submodule_cfg.yaml  submodule_install.py
assets/models/g1/asap/: DOWNLOAD MODEL FROM GITHUB.txt
assets/models/g1/beyondmimic/: 4LongQuan_v20260114.onnx  8Handanxuebu_v20260115.onnx  EricCamper04.onnx  LongQuan_v20260112.onnx  handanxuebu_v20260116_35.onnx
assets/models/g1/unitree/: policy_wo_gait.pt
assets/motions/g1/beyondmimic/: EricCamper04.npz
docs/: environment.md  policy.md  unitree_setup.md
robojudo/: __init__.py
robojudo/config/g1/: __init__.py  asap.yaml  g1_asap_cfg.py  g1_cfg.py  g1_custom_cfg.py  g1_loco_mimic_cfg.py
robojudo/config/h1/: h1_cfg.py
robojudo/controller/: __init__.py  ctrl_cfgs.py  motion_ctrl.py  motion_h2h_ctrl.py  motion_kungfubot_ctrl.py  motion_twist_ctrl.py  twist_redis_ctrl.py
robojudo/controller/utils/: joystick.py  motion_gui.py
robojudo/environment/: base_env.py  env_cfgs.py  mujoco_env.py  unitree_cpp_env.py  unitree_env.py
robojudo/pipeline/: __init__.py  pipeline_cfgs.py  rl_loco_mimic_pipeline.py  rl_multi_policy_pipeline.py  rl_pipeline.py
robojudo/policy/: __init__.py  amo_policy.py  asap_policy.py  base_policy.py  beyondmimic_policy.py  h2h_student_policy.py  kungfubot_policy.py  policy_cfgs.py  smooth_policy.py  twist_policy.py  unitree_policy.py
robojudo/tools/: dof.py
robojudo/utils/: step_timer.py  util_func.py  util_func_torch.py
scripts/: view_log_msgpack.py
tests/: test_full_imports.py
(+16 files in other folders)
