[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RoboJuDo"
version = "1.3.2"
description = "RoboJuDo: A plug-and-play deploy framework for robots. Just deploy, just do."
authors = [
    { name = "GDDG08", email = "GDDG80@outlook.com" }
]
readme = "README.md"
requires-python = ">=3.11"

dynamic = ["dependencies"]

[tool.setuptools]
packages = ["robojudo"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
dev = [
    "pre-commit==4.3.0",
    "ruff==0.12.7",
]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["__pycache__", ".venv", "build", "dist", "logs", "data", "robojudo/controller/motion_lib", "robojudo/policy/hilo", "robojudo/policy/gmt","packages", "third_party"]
lint.select = ["E", "F", "I", "B", "UP"]
lint.ignore = ["B008"]
lint.fixable = ["ALL"]